# rs_json_transform_worker

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  clippy.out
examples/: file_template.json  json_mapping.json  json_to_xml.json  xml_to_json.json  xml_to_xml.json
src/: main.rs  message.rs
tests/: source_1.json  source_3.xml  source_4.xml  source_5.json
