[package]
name = "rs_json_transform_worker"
version = "0.2.0"
authors = [
  "Mathia Haure-Touze <mathia.haure-touzet.ext@francetv.fr>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>"
]
edition = "2018"

[dependencies]
mcai_worker_sdk = "0.10"
jq-rs = {version = "0.4.1", features = ["bundled"]}
jxon = "0.7.0"
futures-util = "0.3.5"
serde_json = "1.0.53"

[build-dependencies]
built = "0.4"
